Test continuous world-model positions