@@ -5,6 +5,7 @@ import me.monstermazeai.kit.Kit;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -22,15 +23,22 @@ class ObservationWorldModelTest {
                 Kit.REPULSOR, 2, 3,
                 new LegacyWorldObservation.BlockPoint(23, 13, 15),
                 new LegacyWorldObservation.Pad(50, 50, 4.0, false),
-                maze, Collections.emptyList(), "Monster Maze",
+                maze, List.of(new LegacyWorldObservation.Monster(
+                        77, MonsterSkinTypes.GAMEPLAY_TYPE, "villager",
+                        23.8, 14.0, 15.4, 0.4, 0.0, -0.2, false)),
+                "Monster Maze",
                 Collections.singletonList("1"));
 
         GameState state = ObservationWorldModel.from(observation);
 
         assertEquals(1234, state.tick);
         assertTrue(state.inMonsterMaze);
-        assertEquals(50.0, state.player.x);
-        assertEquals(50.0, state.player.z);
+        assertEquals(50.2, state.player.x, 1e-9);
+        assertEquals(50.7, state.player.z, 1e-9);
+        assertEquals(0.8, state.monsters.get(0).x, 1e-9);
+        assertEquals(0.4, state.monsters.get(0).z, 1e-9);
+        assertEquals(50, state.monsters.get(0).waypointRow);
+        assertEquals(50, state.monsters.get(0).waypointColumn);
         assertEquals(50, state.activePadRow);
         assertEquals(50, state.activePadColumn);
         assertEquals(1, state.maze.raw(50, 50));
